[package]
name = "lox"
version = "0.1.0"
edition = "2021"
authors = [ "Juan Pablo Yamammoto <jpyamamoto@ciencias.unam.mx>" ]
description = "A lox interpreter."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
lazy_static = "1.4.0"
